# FeOS

./: .gitignore  README.md
feos/: Cargo.toml  qemu.sh
feos/.cargo/: config
feos/src/: main.rs  vga_buffer.rs
