[package]
name = "feos"
version = "0.0.1"
authors = ["Evan Campbell <evan.garreth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
run-command = ["./qemu.sh"]